--- a/app/pages/friends_circle/friends_circle.wxss
+++ b/app/pages/friends_circle/friends_circle.wxss
@@ -203,3 +203,94 @@
         height :180px;
     }
 }
+
+.common-box {
+    background-color : #f3f3f5;
+    margin : 0 15px;
+    position: relative;
+}
+.common-box .icon {
+    position: absolute;
+    width : 14px;
+    height: 14px;
+    top : 13px;
+    left:  13px;
+}
+.common-box .icon.icon-praise {
+    background-image: url(../../img/icon-prise.png);
+}
+.common-box .icon.icon-comment {
+    background-image: url(../../img/icon-com.png);
+}
+.common-box.bottom-line:after {
+    content: '';
+    position: absolute;
+    width : 100%;
+    height: 1px;
+    background-color: #fff;
+    bottom:0;
+    left : 0;
+    transform: scaleY(.5);
+}
+.praise-box,.replay-box {
+    padding : 5px 10px 5px 40px;
+}
+.praise-box .anchor-pic,.replay .anchor-pic {
+    line-height: 0;
+    width : 30px;
+    height : 30px;
+    padding : 0;
+    border : 0px;
+    margin-right: 5px;
+    margin-top: 2px;
+}
+.replay {
+    position: relative;
+    padding-bottom: 3px;
+    margin-top: 5px;
+}
+.replay:first-child {
+    margin-top: 0;
+}
+.replay:last-child:after {
+    height: 0;
+}
+.replay:after {
+    content: '';
+    position: absolute;
+    width : 100%;
+    height: 1px;
+    background-color: #e6e6e6;
+    bottom:0;
+    left : 0;
+    transform: scaleY(.5);    
+}
+.replay .time {
+    font-size: 12px;
+    color : #999;
+    position: absolute;
+    right: 0;
+    line-height: 1.8;
+}
+.replay .media-bd {
+    margin-left: 5px;
+}
+.replay .media-bd .name {
+    font-size: 14px;
+}
+.replay .media-bd .top-name {
+    width : 50%;
+    overflow : hidden;
+    white-space : nowrap;
+    text-overflow : ellipsis;
+}
+.replay .replay-text {
+    line-height: 1.8;
+    margin-top: 3px;
+    font-size: 14px;
+}
+.replay .replay-text .static {
+    font-size: 12px;
+    color : #999;
+    margin-right: 5px;
+}
